auth components added

--- a/ts-frontend/src/app/globals.css
+++ b/ts-frontend/src/app/globals.css
@@ -52,6 +52,11 @@ h6 {
   border-radius: 10px;
 }
 
+.text-stroke {
+  -webkit-text-stroke: 5px white; /* thickness + color */
+  paint-order: stroke fill;       /* makes stroke visible behind text */
+}
+
 @theme {
   --color-myBlue: #1e40af;
   --color-myLightBlue: #2563eb;
